Changed: Fixed the iMac covering the hero content.

--- a/css/plann3dStyles.css
+++ b/css/plann3dStyles.css
@@ -2,7 +2,7 @@
  * File: plann3dStyles.css
  * Authors: Patrick Ferguson and Tom Frauenfelder.
  * Created: 15/09/2015
- * Copyright: Â©2015 Plann3d Pty Ltd
+ * Copyright: Ã‚Â©2015 Plann3d Pty Ltd
  * Purpose: Styling for all plann3d site elements.
  */
 
@@ -24,6 +24,10 @@
     min-height: 100vh;
     overflow: hidden;
     z-index: 0;
+}
+
+#hero .container-fluid {
+    z-index: 15;
 }
 
 .full-height {
@@ -140,7 +144,7 @@ p{
 }
 
 #plann3dTable img {
-    z-index: 10;
+    z-index: 0;
 }
 
 #plann3dTable .plann3dImac {
